# py32f0xx-hal

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config  config.toml
.github/workflows/: clippy.yml
examples/: adc_values.rs  blinky.rs  blinky_adc.rs  blinky_delay.rs  blinky_multiple.rs  blinky_timer.rs  blinky_timer_irq.rs  flash_systick.rs  flash_systick_fancier.rs  i2c_find_address.rs  led_hal_button_irq.rs  pwm.rs  pwm_complementary.rs  serial_echo.rs  serial_spi_bridge.rs  serial_stopwatch.rs  spi_hal_apa102c.rs  spi_rc522.rs  watchdog.rs
src/: adc.rs  delay.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  pwm.rs  rcc.rs  serial.rs  spi.rs  timers.rs  watchdog.rs
tools/: capture_example_bloat.sh  capture_nightly_example_bloat.sh  check.py
