[package]
edition = "2018"
authors = [
    "Daniel Egger <daniel@eggers-club.de>",
    "Thomas Bytheway <github@harkonen.net>",
    "Jesse Braham <jesse@beta7.io>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for py32F0 series microcontrollers"
documentation = "https://docs.rs/crate/py32f0xx-hal"

keywords = ["arm", "cortex-m", "py32f0xx", "hal"]
license = "0BSD"
name = "py32f0xx-hal"
readme = "README.md"
repository = "https://github.com/creatoy/py32f0xx-hal"
version = "0.1.0"

[package.metadata.docs.rs]
features = ["py32f030", "rt"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
bare-metal = { version = "1.0.0" }
cast = "0.3.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12.1"
nb = "1.1.0"
void = { version = "1.0.2", default-features = false }

[dependencies.py32f0]
version = "0.1.0"
features = []

[dev-dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"

[features]
device-selected = []
rt = ["py32f0/rt"]
py32f030 = ["py32f0/py32f030", "device-selected"]
py32f003 = ["py32f0/py32f003", "device-selected"]
py32f002a = ["py32f0/py32f002a", "device-selected"]
py32f002b = ["py32f0/py32f002b", "device-selected"]

# Features based on Flash size (in kbytes)
flash-16 = []
flash-20 = []
flash-24 = []
flash-32 = []
flash-48 = []
flash-64 = []

# Features based on RAM size (in kbytes)
ram-2 = []
ram-3 = []
ram-4 = []
ram-6 = []
ram-8 = []

# MCU aliases
#
# Features correspond specific mcu series
# Note: The easiest way to pick the proper package feature is to apply
# the matching feature for your MCU!
py32f030xx4 = ["py32f030", "flash-16", "ram-2"]
py32f030xx6 = ["py32f030", "flash-32", "ram-4"]
py32f030xx7 = ["py32f030", "flash-48", "ram-6"]
py32f030xx8 = ["py32f030", "flash-64", "ram-8"]

py32f003xx4 = ["py32f003", "flash-16", "ram-2"]
py32f003xx6 = ["py32f003", "flash-32", "ram-4"]
py32f003xx8 = ["py32f003", "flash-64", "ram-8"]

py32f002ax5 = ["py32f002a", "flash-20", "ram-3"]
py32f002bx5 = ["py32f002b", "flash-24", "ram-3"]

[profile.dev]
debug = true
lto = true

[profile.release]
lto = true
debug = true
opt-level = "s"
